# hawq

./: .gitignore  .gitmodules  .p4ignore  .travis.yml  BUILD_INSTRUCTIONS  BUILD_INSTRUCTIONS.md  CMakeLists.txt  COPYRIGHT  DISCLAIMER  GNUmakefile.in  KEYS  LICENSE  Makefile  Makefile.global  Makefile.thirdparty  NOTICE  README  README.md  aclocal.m4  commit-msg  configure  configure.in  coverage-report.sh  getversion  pom.xml  pre-push  putversion  release.txt  releasetag  sanity-test.sh
depends/dbcommon/: CMakeLists.txt  Makefile  Makefile.global  Makefile.global.in  README  bootstrap
depends/dbcommon/CMake/: FindCogapp.cmake  FindGlog.cmake  FindJSON.cmake
depends/dbcommon/src/: CMakeLists.txt
depends/dbcommon/test/: CMakeLists.txt
depends/dbcommon/test/parallel/: parallel-launcher.py
depends/dbcommon/test/unit/: CMakeLists.txt  test-hash-table.cc  unit-test-main.cc
depends/libhdfs3/gtest/: CMakeLists.txt
depends/libhdfs3/src/: CMakeLists.txt  doxyfile.in  libhdfs3.pc.in  platform.h.in
depends/libhdfs3/src/client/: BlockLocation.h  BlockReader.h  CryptoCodec.cpp  CryptoCodec.h  DataTransferProtocol.h  DataTransferProtocolSender.cpp  DataTransferProtocolSender.h  DirectoryIterator.cpp  DirectoryIterator.h  EncryptionZoneInfo.h  EncryptionZoneIterator.cpp  EncryptionZoneIterator.h  FileEncryptionInfo.h  FileStatus.h  FileSystem.cpp  FileSystem.h  FileSystemImpl.cpp  FileSystemImpl.h  FileSystemInter.h  FileSystemKey.cpp  FileSystemKey.h  FileSystemStats.h  Hdfs.cpp  HttpClient.cpp  HttpClient.h  InputStream.cpp  InputStream.h  InputStreamImpl.cpp  InputStreamImpl.h  InputStreamInter.h  KerberosName.cpp  KerberosName.h  KmsClientProvider.cpp  KmsClientProvider.h  LeaseRenewer.cpp  LeaseRenewer.h  LocalBlockReader.cpp  LocalBlockReader.h  OutputStream.cpp  OutputStream.h  (+26 more)
depends/libhdfs3/src/common/: Atomic.h  BigEndian.h  CFileWrapper.cpp  Checksum.h  DateTime.h  Exception.cpp  Exception.h  ExceptionInternal.cpp  ExceptionInternal.h  FileWrapper.h  Function.h  HWCrc32c.cpp  HWCrc32c.h  Hash.cpp  Hash.h  Logger.cpp  Logger.h  LruMap.h  MappedFileWrapper.cpp  Memory.h  SWCrc32c.cpp  SWCrc32c.h  SessionConfig.cpp  SessionConfig.h  StackPrinter.cpp  StackPrinter.h  StringUtil.h  Thread.cpp  Thread.h  Unordered.h  WritableUtils.cpp  WritableUtils.h  WriteBuffer.cpp  WriteBuffer.h  XmlConfig.cpp  XmlConfig.h
depends/libhdfs3/src/network/: BufferedSocketReader.cpp  BufferedSocketReader.h  DomainSocket.cpp  DomainSocket.h  Socket.h  Syscall.h  TcpSocket.cpp  TcpSocket.h
depends/libhdfs3/src/proto/: ClientNamenodeProtocol.proto  datatransfer.proto  encryption.proto  hdfs.proto
depends/libhdfs3/src/rpc/: RpcAuth.cpp  RpcAuth.h  RpcCall.h  RpcChannel.cpp  RpcChannel.h  RpcChannelKey.cpp  RpcChannelKey.h  RpcClient.cpp  RpcClient.h  RpcConfig.cpp  RpcConfig.h  RpcContentWrapper.cpp  RpcContentWrapper.h  RpcProtocolInfo.cpp  RpcProtocolInfo.h  RpcRemoteCall.cpp  RpcRemoteCall.h  RpcServerInfo.cpp  RpcServerInfo.h  SaslClient.cpp  SaslClient.h
depends/libhdfs3/src/server/: BlockLocalPathInfo.h  Datanode.cpp  Datanode.h  DatanodeInfo.h  ExtendedBlock.h  LocatedBlock.h  LocatedBlocks.cpp  LocatedBlocks.h  Namenode.h  NamenodeImpl.cpp  NamenodeImpl.h  NamenodeInfo.cpp  NamenodeInfo.h  NamenodeProxy.cpp  NamenodeProxy.h  RpcHelper.h
depends/libhdfs3/test/function/: CMakeLists.txt  FunctionTestMain.cpp  TestCInterface.cpp  TestFileSystem.cpp  TestInputStream.cpp  TestKmsClient.cpp  TestOutputStream.cpp
depends/libhdfs3/test/secure/: CMakeLists.txt  SecureFunctionTest.cpp  TestSecureCInterface.cpp
depends/libhdfs3/test/unit/: CMakeLists.txt  TestBufferedSocketReader.cpp  TestChecksum.cpp  TestException.cpp  TestGetHANamenodes.cpp  TestLeaseRenewer.cpp  TestLocatedBlocks.cpp  TestLruMap.cpp  TestRpcChannel.cpp  TestRpcClient.cpp  TestSessionConfig.cpp  TestSocket.cpp  TestXmlConfig.cpp  UnitTestCryptoCodec.cpp  UnitTestInputStream.cpp  UnitTestOutputStream.cpp  UnitTestUtils.h
depends/libyarn/: CMakeLists.txt  Makefile  Makefile.global.in  README.md  bootstrap  sync.sh
depends/libyarn/CMake/: CodeCoverage.cmake  FindGSasl.cmake  FindGoogleTest.cmake  FindKERBEROS.cmake  Functions.cmake  Options.cmake  Platform.cmake
depends/libyarn/gmock/: CMakeLists.txt
depends/libyarn/mock/: MockApplicationClient.h  MockApplicationClientProtocol.h  MockApplicationClientProtocolInternal.h  MockApplicationMaster.h  MockApplicationMasterProtocol.h  MockApplicationMasterProtocolInternal.h  MockContainerManagement.h  MockContainerManagementProtocol.h  MockContainerManagementProtocolInternal.h  MockLibYarnClient.h  TestContainerManagementStub.h  TestLibYarnClientStub.h
depends/libyarn/releng/: Makefile  set_bld_arch.sh
depends/libyarn/releng/etc/: ivy.xml
depends/libyarn/releng/publish/: ivy.xml  ivysettings.xml
depends/libyarn/sample/: Makefile  c_client_main.c  c_client_main_profile.c  client_main.cpp
depends/libyarn/src/: CMakeLists.txt  doxyfile.in  platform.h.in
depends/libyarn/src/common/: Atomic.h  BigEndian.h  Checksum.h  DateTime.h  Exception.cpp  Exception.h  ExceptionInternal.cpp  ExceptionInternal.h  Function.h  HWCrc32c.cpp  HWCrc32c.h  Hash.cpp  Hash.h  Logger.cpp  Logger.h  LruMap.h  Memory.h  SWCrc32c.cpp  SWCrc32c.h  SessionConfig.cpp  SessionConfig.h  StackPrinter.cpp  StackPrinter.h  StringUtil.h  Thread.cpp  Thread.h  Unordered.h  WritableUtils.cpp  WritableUtils.h  WriteBuffer.cpp  WriteBuffer.h  XmlConfig.cpp  XmlConfig.h
depends/libyarn/src/libyarnclient/: ApplicationClient.cpp  ApplicationClient.h  ApplicationMaster.cpp  ApplicationMaster.h  ContainerManagement.cpp  ContainerManagement.h  LibYarnClient.cpp  LibYarnClient.h  LibYarnClientC.cpp  LibYarnClientC.h  LibYarnConstants.h
depends/libyarn/src/libyarncommon/: KerberosName.cpp  (+7 more)
depends/libyarn/test/: CMakeLists.txt
depends/libyarn/ztest/: .gitignore  Makefile  c_client_main.c  client_main.cpp
depends/libyarn/ztest_c/: Makefile  c_client_main.c  c_client_main_profile.c
depends/storage/src/: CMakeLists.txt
depends/univplan/src/: CMakeLists.txt
depends/univplan/test/: CMakeLists.txt
(+9854 files in other folders)
