CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#SET(gmock_VERSION_MAJOR 1)
#SET(gmock_VERSION_MINOR 1)
#SET(gmock_API_VERSION ${gmock_VERSION_MAJOR})

SET(gmock_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/gmock/include)
SET(gmock_SOURCES_DIR ${CMAKE_SOURCE_DIR}/gmock)

AUTO_SOURCES(files "*.cc" "RECURSE" "${CMAKE_CURRENT_SOURCE_DIR}")
LIST(APPEND gmock_SOURCES ${files})

AUTO_SOURCES(files "*.h" "RECURSE" "${CMAKE_CURRENT_SOURCE_DIR}")
LIST(APPEND gmock_SOURCES ${files})

#ADD_LIBRARY(gmock-static STATIC ${gmock_SOURCES})
#ADD_LIBRARY(gmock-shared SHARED ${gmock_SOURCES})

#INCLUDE_DIRECTORIES(${gmock_INCLUDE_DIR} ${gmock_SOURCES_DIR} ${gtest_INCLUDE_DIR} ${gtest_SOURCES_DIR})

#TARGET_LINK_LIBRARIES(gmock-static gtest)
#TARGET_LINK_LIBRARIES(gmock-shared gtest)

#SET_TARGET_PROPERTIES(gmock-static PROPERTIES OUTPUT_NAME "gmock")
#SET_TARGET_PROPERTIES(gmock-shared PROPERTIES OUTPUT_NAME "gmock")

SET(gmock_SOURCES ${gmock_SOURCES} PARENT_SCOPE)
SET(gmock_INCLUDE_DIR ${gmock_INCLUDE_DIR} PARENT_SCOPE)
SET(gmock_SOURCES_DIR ${gmock_SOURCES_DIR} PARENT_SCOPE)

#SET_TARGET_PROPERTIES(gmock-shared PROPERTIES VERSION ${gmock_VERSION_MAJOR}.${gmock_VERSION_MINOR} SOVERSION ${gmock_API_VERSION})